bulletin-board-app/Templates/Kubernetes_Service.yml
apiVersion: v1
kind: Service
metadata:
  name: bb-app
  namespace: babelhealth
  annotations: 
    service.beta.kubernetes.io/aws-load-balancer-internal: _SUBNETS_
  labels:
    app: bb-app
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: bb-app
  type: LoadBalancer
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: bb-app
  namespace: babelhealth
  labels:
    app: bb-app
spec:
  selector:
    matchLabels:
      app: bb-app
  replicas: 1 # tells deployment to run 1 pod matching the template
  template:
    metadata:
      annotations:
        iam.amazonaws.com/role: SecretsManager
      labels:
        app: bb-app
        version: v1
    spec:
      containers:
      - name: bb-app
        image: _AWS_ACCOUNT_.dkr.ecr.us-east-1.amazonaws.com/babelhealth:bulletin-board-app
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests: 
            cpu: "100m"
        livenessProbe:
          httpGet:
            path: /swagger/index.html
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 180
        readinessProbe:
          httpGet:
            path: /swagger/index.html
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
        args:
            # Limit the namespace where this ALB Ingress Controller deployment will
            # resolve ingress resources. If left commented, all namespaces are used.
          - --watch-namespace=babelhealth

            # Setting the ingress-class flag below ensures that only ingress resources with the
            # annotation kubernetes.io/ingress.class: "alb" are respected by the controller. You may
            # choose any class you'd like for this controller to respect.
          - --ingress-class=alb

            # Name of your cluster. Used when naming resources created
            # by the ALB Ingress Controller, providing distinction between
            # clusters.
          - --cluster-name=babelhealth

            # AWS VPC ID this ingress controller will use to create AWS resources.
            # If unspecified, it will be discovered from ec2metadata.
            # - --aws-vpc-id=vpc-xxxxxx

            # AWS region this ingress controller will operate in. 
            # If unspecified, it will be discovered from ec2metadata.
            # List of regions: http://docs.aws.amazon.com/general/latest/gr/rande.html#vpc_region
          - --aws-region=us-east-1

            # Enables logging on all outbound requests sent to the AWS API.
            # If logging is desired, set to true.
          - ---aws-api-debug
            # Maximum number of times to retry the aws calls.
            # defaults to 10.
          - --aws-max-retries=10
