bulletin-board-app/Templates/bbapp_Egress_Rule_For_Istio.yml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: aws-bb-app
  namespace: babelhealth
  labels:
    app: bb-app
spec:
  hosts:
 - sqs.us-east-1.amazonaws.com
 - s3.us-east-1.amazonaws.com
  - "*.us-east-1.amazonaws.com"
  ports:
  - number: 80
    name: http-port
    protocol: HTTP
  - number: 443
    name: https-port
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: apipa
  namespace: babelhealth
spec:
  hosts:
  - localhost
  addresses:
  - 169.254.169.254
  ports:
  - number: 80
    name: http
    protocol: tcp
  location: MESH_EXTERNAL
  resolution: STATIC
  endpoints:
  - address: 169.254.169.254
